--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- header -->
     <header>
       <div class="date">JANUARY 1, 1970</div>
-      <h1>The Hacker Times</h1>
+      <h1 class="header">The Hacker Times</h1>
     </header>
     <!-- navigation -->
     <nav>
