--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1 class="header">The Hacker Times</h1>
     </header>
     <!-- navigation -->
-    <nav>
+    <nav class="navigation">
       <ul>
         <li><a href="#">HTML & CSS</a></li>
         <li><a href="#">UX & UI</a></li>
