--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <!-- navigation -->
     <nav class="navigation">
-      <ul>
+      <ul id="menu">
         <li><a href="#">HTML & CSS</a></li>
         <li><a href="#">UX & UI</a></li>
         <li><a href="#">JAVASCRIPT</a></li>
