--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1 class="header">The Hacker Times</h1>
     </header>
     <!-- navigation -->
-    <hr>
+    
     <nav class="navigation">
       <ul id="menu">
         <li><a href="#">HTML & CSS</a></li>
@@ -29,10 +29,10 @@
         <li><a href="#">PYTHON</a></li>
       </ul>
     </nav>
-    <hr>
+   
     <!-- front page article -->
     <main>
-      <h2>Have You Tried Turning It On and Off Again?</h2>
+      <h2 class="front-page-article">Have You Tried Turning It On and Off Again?</h2>
       <h5>By Maurice Moss</h5>
       <img src="assets/front-page-article.png" alt="placeholder">
       <p>
