--- a/index.html
+++ b/index.html
@@ -81,6 +81,22 @@
 </div>
 </div>
 
+<!--Added Footer-->
+<div class="footer">
+  <nav class="navigation">
+    <ul id="menu">
+      <li><a href="#">The Hacker Inc</a></li>
+      <li><a href="#">Accessibility</a></li>
+      <li><a href="#">Sustainability</a></li>
+      <li><a href="#">Contact Us</a></li>
+      <li><a href="#">Follow Us On Social</a></li>
+      <li><a href="#">Join Our Team</a></li>
+      <li><a href="#">Subscribe to Our Newsletter</a></li>
+      <li><a href="#">Thank You!</a></li>
+    </ul>
+  </nav>
+</div>
+
   </div>
 </body>
 </html>
