--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <h1 class="header">The Hacker Times</h1>
     </header>
     <!-- navigation -->
-    
-    <nav class="navigation">
+    <div id="navbar">
+    <nav class="top-navigation">
       <ul id="menu">
         <li><a href="#">HTML & CSS</a></li>
         <li><a href="#">UX & UI</a></li>
@@ -29,7 +29,7 @@
         <li><a href="#">PYTHON</a></li>
       </ul>
     </nav>
-   
+  </div>
     <!-- front page article -->
     <main>
       <h2 class="article-title">Have You Tried Turning It On and Off Again?</h2>
